RESOLVED FIXED204177
[iOS] Crash under WebProcess::processTaskStateDidChange(WebKit::ProcessTaskStateObserver::TaskState)
https://bugs.webkit.org/show_bug.cgi?id=204177
Summary [iOS] Crash under WebProcess::processTaskStateDidChange(WebKit::ProcessTaskSt...
Chris Dumez
Reported 2019-11-13 16:16:29 PST
Crash under WebProcess::processTaskStateDidChange(WebKit::ProcessTaskStateObserver::TaskState): Thread 2 name: Dispatch queue: RBSProcessMonitor Thread 2 Crashed: 0 WebKit 0x00000001011bc19c IPC::Connection::remoteProcessID() const + 0 1 WebKit 0x00000001014e6a00 WebKit::WebProcess::processTaskStateDidChange(WebKit::ProcessTaskStateObserver::TaskState) + 288 2 WebKit 0x000000010118b43c WebKit::ProcessTaskStateObserver::setTaskState(WebKit::ProcessTaskStateObserver::TaskState) + 120 3 WebKit 0x000000010118af5c -[WKProcessTaskStateObserverDelegate process:taskStateDidChange:] + 172 4 AssertionServices 0x0000000187d0789c __36-[BKSProcess _lock_configureMonitor]_block_invoke_2 + 432 (AssertionServices/BKSProcess.m:284) 5 RunningBoardServices 0x0000000186116c20 -[RBSProcessMonitor _handleProcessStateChange:] + 732 (RunningBoardServices/RBSProcessMonitor.m:275) 6 RunningBoardServices 0x000000018612b5d0 __65-[RBSConnection async_observedProcessStatesDidChange:completion:]_block_invoke + 176 (RunningBoardServices/RBSConnection.m:911) 7 libdispatch.dylib 0x0000000183291d7c _dispatch_block_async_invoke2 + 104 (src/queue.c:525) 8 libdispatch.dylib 0x00000001832ae514 _dispatch_client_callout + 16 (src/object.m:495) 9 libdispatch.dylib 0x000000018328baec _dispatch_lane_serial_drain$VARIANT$armv81 + 564 (src/inline_internal.h:2484) 10 libdispatch.dylib 0x000000018328c534 _dispatch_lane_invoke$VARIANT$armv81 + 448 (src/queue.c:3863) 11 libdispatch.dylib 0x000000018328d598 _dispatch_workloop_invoke$VARIANT$armv81 + 1544 (src/inline_internal.h:2525) 12 libdispatch.dylib 0x00000001832957fc _dispatch_workloop_worker_thread + 580 (src/queue.c:6445) 13 libsystem_pthread.dylib 0x00000001832feb74 _pthread_wqthread + 276 (src/pthread.c:2351) 14 libsystem_pthread.dylib 0x0000000183301740 start_wqthread + 8
Attachments
Patch (3.42 KB, patch)
2019-11-13 16:23 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-11-13 16:23:55 PST
Jer Noble
Comment 2 2019-11-14 13:21:08 PST
Comment on attachment 383511 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383511&action=review > Source/WebKit/WebProcess/WebProcess.cpp:224 > + ASSERT_NOT_REACHED(); LOL.
WebKit Commit Bot
Comment 3 2019-11-14 14:18:22 PST
Comment on attachment 383511 [details] Patch Clearing flags on attachment: 383511 Committed r252466: <https://trac.webkit.org/changeset/252466>
WebKit Commit Bot
Comment 4 2019-11-14 14:18:24 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-11-14 14:19:18 PST
Note You need to log in before you can comment on or make changes to this bug.